# Intro2OpenGL

./: CMakeLists.txt  README.md  build.sh
dependencies/: shader.h
dependencies/glad/: glad.h
src/: config.cpp  config.h  glad.c  main.cpp
src/shaders/: fragment.txt  shader.fs  shader.txt  shader.vs  vertex.txt
